workshop/02-pod-service/expose/04-load-balance.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    name: nginx
