workshop/02-pod-service/expose/05-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: nginx.kube.example.com
      http:
        paths:
          - web:
              serviceName: nginx
              servicePort: 80
